[package]
name = "whatwg-infra"
version = "0.1.1"
authors = [
	"Samantha Nguyen, <contact@samanthanguyen.me>",
]
description = "Tiny Rust-based implementation of the WHATWG Infra Standard"
homepage = "https://github.com/acmuta-research/whatwg-infra-rs"
repository = "https://github.com/acmuta-research/whatwg-infra-rs"
documentation = "https://docs.rs/whatwg-infra"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

exclude = [
	".devcontainer",
	".github",
	".vscode",
	"deny.toml",
	".commitlintrc.json",
	"package.json",
	"package-lock.json",
]
